# aquarium-controller

./: .gitignore  CMakeInclude.txt  CMakeLists.txt  README.md  platformio.ini
examples/Arduino/AmbientStation/: ArduinoDhtHub.h  ArduinoDsTemperatureSensorsHub.h  main.cpp
examples/Arduino/AtoStation/: ArduinoAtoLedController.h  ArduinoAtoLevelSensor.h  README.md  main.cpp
examples/Arduino/Common/: ArduinoBlinkingLed.h  ArduinoBuzzer.h  ArduinoSleepPushButton.h  ArduinoSwitchable.h
include/: AbstractDevice.h  DosingPump.h  DosingSchedule.h  DosingStation.h  DosingTask.h  MockCommon.h  MockMillis.h
include/Abstract/: AbstractAlarmListener.h  AbstractBuzzer.h  AbstractConfigurationStorage.h  AbstractConnection.h  AbstractCyclicSwitch.h  AbstractDevice.h  AbstractDispenser.h  AbstractHumiditySensor.h  AbstractObservable.h  AbstractObserver.h  AbstractPushButton.h  AbstractRunnable.h  AbstractSleepable.h  AbstractSwitchable.h  AbstractTemperatureSensor.h  ICalibratable.h  IForwarder.h  ISleepable.h  ListIterator.h  MapIterator.h
include/AlarmStation/: Alarm.h  AlarmArray.h  AlarmArrayElement.h  AlarmCode.h  AlarmList.h  AlarmNotifyConfiguration.h  AlarmSettings.h  AlarmSeverity.h  AlarmStation.h  LinkedAlarm.h
include/AmbientStation/: AbientSettings.h  AmbientHumiditySensorConnection.h  AmbientStation.h  AmbientTemperatureSensorConnection.h  SystemTemperatureSensorConnection.h  WaterTemperatureSensorConnection.h
include/AtoStation/: AbstractAtoDispenser.h  AtoSettings.h  AtoStation.h  HighLevelSensorConnection.h  LowLevelSensorConnection.h  NormalLevelSensorConnection.h  ReservoirLowLevelSensorConnection.h
include/Common/: CountDown.h  DayOfWeek.h  FunctionList.h  KeyValue.h  LinkedFunction.h  LinkedHashMap.h  LinkedList.h  LinkedMap.h  RingBuffer.h  RunnableFunction.h  Sensor.h  StorableFunction.h  Switchable.h
include/DosingStation/: DosingIrControl.h  DosingPort.h  DosingPump.h  DosingPump190201.bkcp  DosingSchedule.h  DosingStation.h  DosingTask.h  DosingTasksList.h
include/DosingStationOld/: DosingPort.h  DosingPump190201.bkcp  DosingSchedule.h  DosingTask.h
include/Enums/: AlarmCode.h  AlarmSeverity.h  AtoStationState.h  DayOfWeek.h  LedState.h  Level.h  LiquidLevelState.h  State.h  StationState.h  Switched.h  TemperatureUnit.h
include/Sensors/: AbstractHumiditySensor.h  AbstractLiquidLevelSensor.h  AbstractTemperatureAndHumiditySensor.h  AbstractTemperatureSensor.h  TemperatureAndHumiditySensor.h  TemperatureAndHumiditySensorDHT.h  TemperatureSensorDS18B20.h
include/Storage/: AbstractConfigurationStorage.h  MockStorage.h  Storage.h
include/TemperatureControlStation/: AmbientFanDoubleSwitch.h  TemperatureControlSettings.h  TemperatureControlStation.h  TemperatureControlStation190130A.bckp
lib/Adafruit AM2320 sensor library_ID2456/: .library.json
lib/Adafruit PWM Servo Driver Library_ID30/: .library.json
lib/Adafruit_Motor_Shield_V2_Library/: Adafruit_MotorShield.cpp
lib/DHT sensor library_ID19/: .library.json
lib/DS3232RTC_ID78/: .library.json  library.json
lib/LinkedList/: LinkedList.h  LinkedList.h.gch
lib/Streaming_ID560/: .library.json
src/: CMakeLists.txt  main.cpp
src/main/: main.ino
test/: CMakeLists.txt  MockStorage.h  README  Test_SaveAndReadToFromStorage.cpp  Test_TemperatureSensorDS18B20.cpp  eeprom-layout-190112A.xlsx  testDosingTask.cpp
test/AlarmStationTest/: AlarmArrayTest.cpp  AlarmListTest.cpp  AlarmStationTest.cpp  test.bat  test.sh
test/AmbientStationTests/: AmbientStationTest.cpp
test/AtoStationTest/: AtoStationStateObserverTest.cpp  AtoStationTest.cpp  MockAtoDispenser.h  MockLiquidLevelSensor.h  TestAtoStation.cpp  TestInterface.cpp  compileInterface.bat  test.bat  test.sh
test/Common/: LinkedHashMapTest.cpp  LinkedListTest.cpp  LinkedMapTest.cpp  PushButtonTest.cpp  RingBufferTest.cpp
test/DosingStationTest/: DosingPortTest.cpp  TestDosingPump.cpp  test.bat  test.sh
test/TemperatureControlStationTest/: MockDevice.h  MockHeater.h  MockHumiditySensor.h  MockTemperatureAndHumiditySensor.h  MockTemperatureSensor.h  TemperatureControlStationTest.cpp  TestTemperatureControlStation.cpp  test.bat  test.sh
test/_Mocks/: MockBuzzer.h  MockCommon.h  MockDevice.h  MockHeater.h  MockHumiditySensor.h  MockLiquidDispenser.h  MockLiquidLevelSensor.h  MockPushButton.h  MockStorage.h  MockTemperatureAndHumiditySensor.h  MockTemperatureSensor.h  Switchable.h
