cmake_minimum_required(VERSION 3.13)
project(AquariumController)

set(CMAKE_CXX_STANDARD 11)
include_directories(include)
include_directories("lib/Adafruit AM2320 sensor library_ID2456")
include_directories("lib/Adafruit PWM Servo Driver Library_ID30")
include_directories("lib/Adafruit Unified Sensor_ID31")
include_directories("lib/Adafruit_Motor_Shield_V2_Library")
include_directories("lib/Arduino-Temperature-Control-Library")
include_directories("lib/DHT_sensor_library_ID19")
include_directories("lib/DS3232RTC_ID78")
include_directories("lib/LinkedList")
include_directories("lib/OneWire")
include_directories("lib/Streaming_ID560")
#include_directories(lib/Time_ID44)
include_directories(src)

#add_executable(AquariumController test/AtoStationTest/TestAtoStation.cpp test/TemperatureControlStationTest/MockTemperatureSensor.h test/TemperatureControlStationTest/MockTemperatureAndHumiditySensor.h include/Abstract/AbstractDevice.h test/TemperatureControlStationTest/MockDevice.h test/TemperatureControlStationTest/MockHumiditySensor.h)
#add_executable(AquariumController test/TemperatureControlStationTest/TestTemperatureControlStation.cpp test/TemperatureControlStationTest/MockTemperatureSensor.h test/TemperatureControlStationTest/MockTemperatureAndHumiditySensor.h test/TemperatureControlStationTest/MockDevice.h test/TemperatureControlStationTest/MockHumiditySensor.h)
add_executable(AquariumController test/DosingStationTest/TestDosingPump.cpp test/DosingStationTest/TestDosingPump.cpp)
