add_executable(AlarmStationTest AlarmStationTest/TestAlarmStation.cpp)
add_test(NAME AlarmStationTest COMMAND TestAlarmstation)

add_executable(AtoStationTest AtoStationTest/TestAtoStation.cpp)
add_test(NAME AtoStationTest COMMAND TestAtostation)

add_executable(DosingPortTest DosingStationTest/TestDosingPort.cpp)
add_test(NAME DosingPortTest COMMAND TestDosingPort)

add_executable(TemperatureControlStationTest TemperatureControlStationTest/TestTemperatureControlStation.cpp)
add_test(NAME TemperatureControlStationTest COMMAND TestTemperatureControlStation)

